[package]
name = "mc-scanner"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
cidr-utils = "0.6.1"
ipnetwork = "0.21.1"
rand = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45.0", features = ["full"] }
tokio-socks = "0.5.2"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
